Fix warning generated by deprecated syntax
Change-Id: Ib8ad97621527ec9869fdc743490706d9c9957df2
Signed-off-by: Tim Johnson <tijohnson@linuxfoundation.org>

--- a/jjb/lf-macros.yaml
+++ b/jjb/lf-macros.yaml
@@ -9,7 +9,7 @@
 - builder:
     name: comment-to-gerrit
     builders:
-      - shell: !include-raw ../shell/comment-to-gerrit.sh
+      - shell: !include-raw: ../shell/comment-to-gerrit.sh
 
 - builder:
     name: lf-fetch-dependent-patches
