Invoke mvn goal 'install' not deploy in new verify job
Change-Id: I2ac52d56c5ede921d39e6a12ae06d888916be14b
Signed-off-by: Lott, Christopher (cl778h) <cl778h@att.com>

--- a/jjb/lf-maven-jobs.yaml
+++ b/jjb/lf-maven-jobs.yaml
@@ -1402,6 +1402,9 @@
 - lf_maven_docker_verify: &lf_maven_docker_verify
     name: lf-maven-docker-verify
 
+    # image push not allowed during verification
+    mvn-goals: clean install
+
     builders:
       - lf-infra-pre-build
       - lf-jacoco-nojava-workaround
