--- a/jjb/lf-maven-jobs.yaml
+++ b/jjb/lf-maven-jobs.yaml
@@ -833,6 +833,14 @@
     gerrit_release_triggers:
       - comment-added-contains-event:
           comment-contains-value: stage-release$
+`
+    gerrit_trigger_file_paths:
+      - compare-type: ANT
+        pattern: '**'
+
+    # github_included_regions MUST match gerrit_trigger_file_paths
+    github_included_regions:
+      - '.*'
 
     #####################
     # Job Configuration #
@@ -925,6 +933,7 @@
               branches:
                 - branch-compare-type: ANT
                   branch-pattern: '**/{branch}'
+              file-paths: '{obj:gerrit_trigger_file_paths}'
 
 - job-template:
     name: '{project-name}-maven-stage-{stream}'
@@ -960,6 +969,7 @@
           github-hooks: true
           white-list-target-branches:
             - '{branch}'
+          included-regions: '{obj:github_included_regions}'
 
 ##########################
 # Maven Stage for Docker #
@@ -1033,6 +1043,7 @@
               branches:
                 - branch-compare-type: ANT
                   branch-pattern: '**/{branch}'
+              file-paths: '{obj:gerrit_trigger_file_paths}'
 
 - job-template:
     name: '{project-name}-maven-docker-stage-{stream}'
@@ -1070,6 +1081,7 @@
           github-hooks: true
           white-list-target-branches:
             - '{branch}'
+          included-regions: '{obj:github_included_regions}'
 
 ###############
 # Maven Sonar #
