gerrit-tox-verify: Allow skip-vote configuration
Add a new parameter controlling whether the Jenkins Gerrit Trigger
plugin should vote depending on the build outcome.

Change-Id: I0197b2df19e303a813df91e4c4e6120cc79456fc
Signed-off-by: Alexandru Avadanii <Alexandru.Avadanii@enea.com>

--- a/jjb/lf-python-jobs.yaml
+++ b/jjb/lf-python-jobs.yaml
@@ -471,6 +471,7 @@
     # Default parameters #
     ######################
 
+    gerrit-skip-vote: false
     gerrit_verify_triggers:
       - patchset-created-event:
           exclude-drafts: true
@@ -506,6 +507,11 @@
                 - branch-compare-type: ANT
                   branch-pattern: '**/{branch}'
               file-paths: '{obj:gerrit_trigger_file_paths}'
+          skip-vote:
+            successful: '{gerrit-skip-vote}'
+            failed: '{gerrit-skip-vote}'
+            unstable: '{gerrit-skip-vote}'
+            notbuilt: '{gerrit-skip-vote}'
 
 - job-template:
     # Python projects typically use tox to run testing.
