gerrit-tox-verify: Allow skip-vote configuration
Add new parameters controlling whether the Jenkins Gerrit Trigger
plugin should vote depending on the build outcome.

Change-Id: I0197b2df19e303a813df91e4c4e6120cc79456fc
Signed-off-by: Alexandru Avadanii <Alexandru.Avadanii@enea.com>

--- a/jjb/lf-python-jobs.yaml
+++ b/jjb/lf-python-jobs.yaml
@@ -471,6 +471,10 @@
     # Default parameters #
     ######################
 
+    skip-vote-successful: false
+    skip-vote-failed: false
+    skip-vote-unstable: false
+    skip-vote-notbuilt: false
     gerrit_verify_triggers:
       - patchset-created-event:
           exclude-drafts: true
@@ -506,6 +510,11 @@
                 - branch-compare-type: ANT
                   branch-pattern: '**/{branch}'
               file-paths: '{obj:gerrit_trigger_file_paths}'
+          skip-vote:
+            successful: '{skip-vote-successful}'
+            failed: '{skip-vote-failed}'
+            unstable: '{skip-vote-unstable}'
+            notbuilt: '{skip-vote-notbuilt}'
 
 - job-template:
     # Python projects typically use tox to run testing.
