Update status-context to append java-version
Multiple jobs created using same job-template updating same github check status
due to hard coded status-context to Maven Verify.
Now appending status-context with maven-version and java-version to make it unique.

Issue: RELENG-2027
Signed-off-by: Suresh Channamallu <schannamallu@linuxfoundation.org>
Change-Id: I2ae048a24c9c68e73ab0086cf05d327eb375856d

--- a/jjb/lf-maven-jobs.yaml
+++ b/jjb/lf-maven-jobs.yaml
@@ -1425,7 +1425,7 @@
       - github-pull-request:
           trigger-phrase: '^(recheck|reverify)$'
           only-trigger-phrase: false
-          status-context: 'Maven Verify'
+          status-context: 'Maven Verify {mvn-version}-{java-version}'
           permit-all: true
           github-hooks: true
           white-list-target-branches:
@@ -1525,7 +1525,7 @@
       - github-pull-request:
           trigger-phrase: '^(recheck|reverify)$'
           only-trigger-phrase: false
-          status-context: 'Maven Docker Verify'
+          status-context: 'Maven Docker Verify {mvn-version}-{java-version}'
           permit-all: true
           github-hooks: true
           white-list-target-branches:
