--- a/jjb/lf-maven-jobs.yaml
+++ b/jjb/lf-maven-jobs.yaml
@@ -1425,7 +1425,7 @@
       - github-pull-request:
           trigger-phrase: '^(recheck|reverify)$'
           only-trigger-phrase: false
-          status-context: 'Maven Verify'
+          status-context: 'Maven Verify {mvn-version}-{java-version}'
           permit-all: true
           github-hooks: true
           white-list-target-branches:
