Pin pygments to 2.3.x
Pygments release 2.4.0 which added a python requires that excludes all
versions of Python < 3.5. The LFCI's default 3 version is 3.4 so causes
build failure.

Change-Id: I109abca54d4a87fa45c6397a1f55257d67a7ef6a
Signed-off-by: Andrew Grimberg <agrimberg@linuxfoundation.org>

--- a/tox.ini
+++ b/tox.ini
@@ -17,6 +17,7 @@ basepython = python3
 deps =
     coala
     coala-bears
+    pygments~=2.3.1
     # Markdown lint requires nodejs
     nodeenv
 commands =
