--- a/jjb/lf-info-vote.yaml
+++ b/jjb/lf-info-vote.yaml
@@ -94,7 +94,7 @@
           server-name: '{gerrit-server-name}'
           trigger-on: '{obj:gerrit_verify_triggers}'
           projects:
-            - project-compare-type: 'REG_EXP'
+            - project-compare-type: 'ANT'
               project-pattern: '**'
               branches:
                 - branch-compare-type: 'ANT'
