Fix info-vote job
When majority voting checks out:
info-vote job must verify, sleep for a second,
and then submit based on GERRIT_PATCHSET_REVISION

change compare type from REGEX to ANT for file trigger

Signed-off-by: Aric Gardner <agardner@linuxfoundation.org>
Change-Id: Ie9477b0e0b3cfc193469fe55bc59eecae72ef756

--- a/jjb/lf-info-vote.yaml
+++ b/jjb/lf-info-vote.yaml
@@ -7,7 +7,7 @@
     name: lf-info-vote-common
 
     gerrit_trigger_file_paths:
-      - compare-type: REG_EXP
+      - compare-type: ANT
         pattern: 'INFO.yaml'
 
     #####################
